Create HTML structure for displaying Rock-Paper-Scissors options
- Added HTML code to create a structure for displaying the three options for Rock-Paper-Scissors game.
- The options (Rock, Paper, Scissors) are represented using buttons for player selection.
- This commit lays the foundation for allowing players to choose their move in the game.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title> </title>
 </head>
 <body>
-
+    <div class="container">
+        <h1>Rock Paper Scissors</h1>
+        <div class="options">
+            <button id="rock">Rock</button>
+            <button id="rock">Paper</button>
+            <button id="rock">Scissors</button>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
