Adding onclick for janken_random fucntion

--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
     <div class="container">
         <h1>Rock Paper Scissors</h1>
         <div class="options">
+            <!-- onclickはHTMLのイベント属性で、ボタンがクリックされた時のイベントハンドラを指定 -->
+            <!-- ="Saikoro()"でダブルクォートで囲まれている部分は、そのイベントが発生した時に実行されるJavaScript関数を指定。-->    
             <button id="rock">Rock</button>
-            <button id="rock">Paper</button>
-            <button id="rock">Scissors</button>
+            <button id="Paper">Paper</button>
+            <button id="Scissors">Scissors</button>
         </div>
+        <p id="result"></p>
     </div>
     <script src="script.js"></script>
 </body>
 </html>
+
+            <!-- -->    
+            <!-- -->    
