Update html title

--- a/index_console.html
+++ b/index_console.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
 </head>
 <body>
     
     <script src="script_console.js"></script>
-    
+
 </body>
 </html>
