Fix : Remove unnacessary ) in playGame inside of console.log

--- a/index_console.html
+++ b/index_console.html
@@ -8,6 +8,9 @@
 <body>
     
     <script src="script_console.js"></script>
+    <script>
+        playGame(); 
+      </script>
 
 </body>
 </html>
