--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -6,13 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="">
+    <form>
         <div>
-            <input type = "text">
+            <label for = "name">お名前</label>
+            <input type="text" id = "name" >
         </div>
         <div>
-            <textarea></textarea>
+
+            <textarea id = "content"></textarea>
+            <label for = "content">内容</label>
         </div>
     </form>
+
 </body>
 </html>
