--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -9,14 +9,17 @@
     <form>
         <div>
             <label for = "name">お名前</label>
-            <input type="text" id = "name" >
+            <input type ="text" id = "name" placeholder="例:龍馬">
         </div>
         <div>
-
-            <textarea id = "content"></textarea>
-            <label for = "content">内容</label>
+            <label for = "name">お名前
+                <input type ="text"  placeholder="例:桜木花道">
+            </label>
+        </div>
+        <div>
+            <label for="inquiry">問い合わせ</label>
+            <textarea id = "inquiry" placeholder="例:商品についての問い合わせ"></textarea>
         </div>
     </form>
-
 </body>
 </html>
