--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -8,17 +8,26 @@
 <body>
     <form>
         <div>
-            <label for = "name">お名前</label>
-            <input type ="text" id = "name" placeholder="例:龍馬">
-        </div>
-        <div>
-            <label for = "name">お名前
-                <input type ="text"  placeholder="例:桜木花道">
+            <label>
+                名前
+                <input type="text">
+            </label>
+            <label>
+                商品
+                <input type="checkbox">
+                商品
+                <input type="checkbox">
+                商品
+                <input type="checkbox">
+            </label>
+            <label>
+                問い合わせ
+                <textarea></textarea>
             </label>
         </div>
         <div>
-            <label for="inquiry">問い合わせ</label>
-            <textarea id = "inquiry" placeholder="例:商品についての問い合わせ"></textarea>
+        </div>
+        <div>
         </div>
     </form>
 </body>
