--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -12,22 +12,18 @@
                 名前
                 <input type="text">
             </label>
-            <label>
-                商品
-                <input type="checkbox">
-                商品
-                <input type="checkbox">
-                商品
-                <input type="checkbox">
-            </label>
+        </div>
+        <fieldset>
+            <legend>商品一覧</legend>
+            <label>商品A<input type = "checkbox"></label>
+            <label>商品B<input type = "checkbox"></label>
+            <label>商品C<input type = "checkbox"></label>
+        </fieldset>
+        <div>
             <label>
                 問い合わせ
                 <textarea></textarea>
             </label>
-        </div>
-        <div>
-        </div>
-        <div>
         </div>
     </form>
 </body>
