Number(n) and Prompt Practice

--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -6,25 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <form>
-        <div>
-            <label>
-                名前
-                <input type="text">
-            </label>
-        </div>
-        <fieldset>
-            <legend>商品一覧</legend>
-            <label>商品A<input type = "checkbox"></label>
-            <label>商品B<input type = "checkbox"></label>
-            <label>商品C<input type = "checkbox"></label>
-        </fieldset>
-        <div>
-            <label>
-                問い合わせ
-                <textarea></textarea>
-            </label>
-        </div>
-    </form>
+    <script>
+        let n = prompt("give me a number");
+        console.log(Number(n) + 10);
+
+    </script>
 </body>
 </html>
