--- a/MyPortfolio_dot.install/index.html
+++ b/MyPortfolio_dot.install/index.html
@@ -10,9 +10,14 @@
 </head>
 <body>
     <header>
-      <div class="profile">
-        <img src="yamada.png" alt="profile.picture">
+      <div class ="profilePicture">
+        <img src ="yamada.png" alt ="profile.icon" width="128" height="128">
       </div>
+      <div class = "profileText">
+        <h1>山田太郎</h1>
+        <p>Webデザイナー見習いです</p>
+      </div>
+      
     </header>
     <main>
 
