--- a/MyPortfolio_dot.install/index.html
+++ b/MyPortfolio_dot.install/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+  <header>
       <div class ="profilePicture">
         <img src ="yamada.png" alt ="profile.icon" width="128" height="128">
       </div>
@@ -18,12 +18,51 @@
         <p>Webデザイナー見習いです</p>
       </div>
       
-    </header>
-    <main>
+  </header>
+  <main>
+    <div class="main1"> 
+      <div class="h2_and_img">
+        <h2>WORKS</h2>
+        <img src="work-1.png" alt="picture1">
+      </div>
+      <div class="main_text">
+        <h3>すごいゲーム</h3>
+        <p class="multiple-repeats">すごいゲームです。</p>
+      </div>
+    </div>
+
+    <div class="main1"> 
+      <div class="h2_and_img">
+        <img src="work-2.png" alt="picture2">
+      </div>
+      <div class="main_text">
+        <h3>すごいゲーム</h3>
+        <p class="multiple-repeats">すごいゲームです。</p>
+      </div>
+    </div>
+
+    <div class="main1"> 
+      <div class="h2_and_img">
+        <img src="work-3.png" alt="picture3">
+      </div>
+      <div class="main_text">
+        <h3>すごいゲーム</h3>
+        <p class="multiple-repeats">すごいゲームです。</p>
+      </div>
+    </div>
 
     </main>
     <footer>
 
     </footer>
+
+    <script>
+      const repeatElement = document.querySelectorAll(".multiple-repeats");
+      repeatElement.forEach((mainText =>{
+        const originalText = mainText.textContent;
+        const repeatedText = originalText.repeat(7);
+        mainText.textContent = repeatedText;
+      }))
+    </script>
 </body>
 </html>
