--- a/MyPortfolio_dot.install/index.html
+++ b/MyPortfolio_dot.install/index.html
@@ -51,10 +51,13 @@
       </div>
     </div>
 
-    </main>
-    <footer>
-
-    </footer>
+  </main>
+  <footer>
+      <p>(c) doinstall.com</p>
+      <img src="sns-1.png" alt="footerImage1">
+      <img src="sns-2.png" alt="footerImage2">
+      <p></p>
+  </footer>
 
     <script>
       const repeatElement = document.querySelectorAll(".multiple-repeats");
