--- a/MyPortfolio_dot.install/index.html
+++ b/MyPortfolio_dot.install/index.html
@@ -53,10 +53,18 @@
 
   </main>
   <footer>
-      <p>(c) doinstall.com</p>
-      <img src="sns-1.png" alt="footerImage1">
-      <img src="sns-2.png" alt="footerImage2">
-      <p></p>
+    <div class="footer-text">
+      <small>(c) doinstall.com</small>
+    </div>
+    <div class="footer-image">
+      <address>
+        <a href="#" target="_blank"><img src="sns-1.png" alt="footerImage1"></a>
+      </address>
+      <address>
+        <a href="#" target="_blank"><img src="sns-2.png" alt="footerImage2"></a>
+      </address>
+     </div> 
+     
   </footer>
 
     <script>
