css button hover and shadow and cursor

--- a/MyOmikuji/index.html
+++ b/MyOmikuji/index.html
@@ -14,5 +14,13 @@
         </section>
         <button>おみくじを引く</button>
     </main>
+
+    <script>
+        document.querySelector("button").addEventListener("click",()=>{
+            const btn = document.querySelector("button");
+            btn.style.opacity = 0.8;
+               
+        })
+    </script>
 </body>
 </html>
