Event random by Switch

--- a/MyOmikuji/index.html
+++ b/MyOmikuji/index.html
@@ -10,17 +10,12 @@
     <main>
         <section>
             <h1>今日の運勢</h1>
-            <p>?</p>
+            <p id="result">?</p>
         </section>
-        <button>おみくじを引く</button>
+        <button id="btn">おみくじを引く</button>
     </main>
 
-    <script>
-        document.querySelector("button").addEventListener("click",()=>{
-            const btn = document.querySelector("button");
-            btn.style.opacity = 0.8;
-               
-        })
-    </script>
+   
+    <script src="main.js"></script>
 </body>
 </html>
