--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -4,30 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .greentext{
-            color:green
-        }
-        .pinkbg{
-            background-color: pink;
-        }
-        .redborder{
-            border: 2px solid red;
-        }
-    </style>
 </head>
 <body>
-    <p class="greentext">Hello</p>
-    <button>OK</button>
+    <button>
+        Button
+    </button>
+    
+    <script>
+        const btn = document.querySelector("button");
 
-<script>
-    document.querySelector("button").addEventListener("click",()=>{
-        const p = document.querySelector("p");
-        p.classList.add("pinkbg","redborder");
-        p.classList.remove("greentext");
-        
-
-    });
-</script>
+        btn.addEventListener("click",()=>{
+            console.log("clicked");
+        })
+    </script>
 </body>
 </html>
