Fix element in event

--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -14,7 +14,7 @@
         const p = document.querySelector("p");
 
         btn.addEventListener("click",()=>{
-            p.textContent = p.textContent;
+            p.textContent = btn.textContent;
         })
     </script>
 </body>
