practice DOM class and change color

--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -4,18 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .green-color{
+            color: green;
+        }
+        .pink-bg{
+            background-color: pink;
+        }
+        .red-border{
+            border: solid 1px red;
+        }
+    </style>
 </head>
 <body>
-    <button>OK</button>
-    <p>Hello</p>
-
+    <button>Button</button>
+    <p class="green-color">a</p>
+    
     <script>
-        const btn = document.querySelector("button");
         const p = document.querySelector("p");
-
+        const btn = document.querySelector("button");
         btn.addEventListener("click",()=>{
-            p.textContent = btn.textContent;
-        })
+        p.classList.add("pink-bg","red-border");
+        p.classList.remove("green-color");
+        });
     </script>
 </body>
 </html>
