practice DOM toggle

--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -24,8 +24,8 @@
         const p = document.querySelector("p");
         const btn = document.querySelector("button");
         btn.addEventListener("click",()=>{
-        p.classList.add("pink-bg","red-border");
-        p.classList.remove("green-color");
+
+        p.classList.toggle("pink-bg");
         });
     </script>
 </body>
