--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -26,6 +26,10 @@
         btn.addEventListener("click",()=>{
 
         p.classList.toggle("pink-bg");
+       if(p.classList.contains("pink-bg")===true){
+        p.classList.toggle("red-border");
+       }
+
         });
     </script>
 </body>
