dom forEach => Fail...I could not understand

--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -4,32 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .green-color{
-            color: green;
-        }
-        .pink-bg{
-            background-color: pink;
-        }
-        .red-border{
-            border: solid 1px red;
-        }
-    </style>
 </head>
 <body>
-    <button>Button</button>
-    <p class="green-color">a</p>
-    
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+    <button>ok</button>
     <script>
-        const p = document.querySelector("p");
-        const btn = document.querySelector("button");
-        btn.addEventListener("click",()=>{
-
-        p.classList.toggle("pink-bg");
-       if(p.classList.contains("pink-bg")===true){
-        p.classList.toggle("red-border");
-       }
-
+        const ul = document.querySelectorAll("ul");
+        const btn = document.querySelectorAll("button");
+        btn.event
+        ("click",()=>{
+            
         });
     </script>
 </body>
