Practice List and For Each...fail

--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -1,26 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-  <ul>
-    <li>1</li>
-    <li>2</li>
-    <li>3</li>
-  </ul>
-  <button>ok</button>
-  <script>
-    const ul = document.querySelectorAll("li");
-    const btn = document.querySelector("button");
-    btn.addEventListener("click", () => {
-      ul.forEach(n => {
-        n.textContent = "change";
-        n.style.color = "green";
-      });
-    });
-  </script>
+    <script>
+        const fruits = ["apple", "banana","orange","grape"];
+        fruits.forEach(name,no);
+        console.log(${`no`}:${`name`});
+    </script>
 </body>
 </html>
