Practice List and For Each...fail

--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -8,8 +8,9 @@
 <body>
     <script>
         const fruits = ["apple", "banana","orange","grape"];
-        fruits.forEach(name,no);
-        console.log(${`no`}:${`name`});
+        fruits.forEach((name,no)=>{
+        console.log('${no}:${name}');
+        });
     </script>
 </body>
 </html>
