Practice List and For Each...complete

--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -9,7 +9,7 @@
     <script>
         const fruits = ["apple", "banana","orange","grape"];
         fruits.forEach((name,no)=>{
-        console.log('${no}:${name}');
+        console.log(`${no}:${name}`);
         });
     </script>
 </body>
