practice LIST ...Fail

--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -7,10 +7,12 @@
 </head>
 <body>
     <script>
-        const fruits = ["apple", "banana","orange","grape"];
-        fruits.forEach((name,no)=>{
-        console.log(`${no}:${name}`);
-        });
+        const scores = [70, 90, 80, 85];
+        console.log(scores[]);
+        console.log(scores[2]);
+        console.log(scores.length);
+        scores[1] = 95;
+        console.log(scores[1]);
     </script>
 </body>
 </html>
