--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -8,11 +8,11 @@
 <body>
     <script>
         const scores = [70, 90, 80, 85];
-        console.log(scores[]);
+        console.log(scores);
         console.log(scores[2]);
         console.log(scores.length);
         scores[1] = 95;
-        console.log(scores[1]);
+        console.log(scores);
     </script>
 </body>
 </html>
