--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -6,13 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <button>Click Me</button>
     <script>
-        const scores = [70, 90, 80, 85];
-        console.log(scores);
-        console.log(scores[2]);
-        console.log(scores.length);
-        scores[1] = 95;
-        console.log(scores);
+        const btn = document.querySelector('button');
+        btn.addEventListener('click',()=>{
+            alert('Hello');
+        });
     </script>
+    
 </body>
 </html>
