--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -18,7 +18,7 @@
   <button>Click me</button>
   <p>Initial text</p>
   <script>
-    const btn = document.querySelector('btn');
+    const btn = document.querySelector('button');
     const p = document.querySelector('p');
     
     btn.addEventListener('click',()=>{
