--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -18,7 +18,9 @@
     const btn = document.querySelector('button');
     btn.addEventListener('click',()=>{
         document.getElementById('second').textContent = 'changed';
-        
+        document.querySelectorAll("class.target").forEach(target=>{
+            target.textContent = "changed";
+        });
     });
   </script>
 </body>
