--- a/MyTabMenu/index.html
+++ b/MyTabMenu/index.html
@@ -9,12 +9,12 @@
 <body>
 　 <div class="container">
     <ul class="menu">
-        <li><a href="#">サイトの概要</a></li>
+        <li><a href="#" class="active">サイトの概要</a></li>
         <li><a href="#">サービスの内容</a></li>
         <li><a href="#">お問い合わせ</a></li>       
     </ul>
 
-    <section class="content">
+    <section class="content active">
         サイトの概要
     </section>
 
