--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -5,15 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+  <style>
+    .pink-bg{
+      background-color: pink;
+    }
+    .red-border{
+      border: 2px solid red;
+    }
+    .green-color{
+      color: green;
+    }
+  </style>
 <body>
-    <p>Hello</p>
-    <button>a</button>
+    <p class = "green-color" >Hello</p>
+    <button>OK</button>
 
     <script>
       const btn = document.querySelector('button');
       const p = document.querySelector('p');
+      
       btn.addEventListener('click',()=>{
-      p.textContent = btn.textContent;
+      p.classList.add('pink-bg','red-border');
+      p.classList.remove('green-color');
+      
       });
     </script>
 </body>
