#08 fail create li

--- a/Experiment/dot.install.html
+++ b/Experiment/dot.install.html
@@ -28,10 +28,10 @@
       const btn = document.querySelector('button');
       const p = document.querySelector('p');
       const liAll = document.querySelectorAll('li');
+      const newli = document.createElement('li');
 
       btn.addEventListener('click',()=>{
-        document.getElementById('second').textContent = 'Changed!';
-    });
+        newli.textContent = 'Hanako';
      
     </script>
 </body>
