--- a/MyWalkingApp/index.html
+++ b/MyWalkingApp/index.html
@@ -10,25 +10,57 @@
 </head>
 <body>
   <header>
-  <button class = "download">ダウンロード</button>
-  <h1>すごいお散歩アプリ</h1>
-  <p>毎日のお散歩をAIがもっと楽しくする</p>
-  <button class = "download">ダウンロード</button>
+
+    <h1>
+      <img src="logo-sp.png" alt="Dotinstall Walking" width="116" height="32">
+    </h1>
+    <a href="#" class="btn">ダウンロード</a>
+  
   </header>
 
   <main>
-  <h1>特徴の紹介</h1>
-  <h2>すごい特徴</h2>
-  <p>すごいのです！</p>
-  <h2>すごい特徴</h2>
-  <p>すごいのです！</p>
-  <h2>すごい特徴</h2>
-  <p>すごいのです！</p>
+    <section class="hero">
+      <div>
+        <h2>すごいお散歩アプリ</h2>
+        <p>毎日のお散歩を<br>AIがもっと楽しくする</p>
+        <a href="#" class="btn">ダウンロード</a>
+      </div>
+      <img src="app.png" alt="application image" width="300" height="312">
+    </section>
+
+    <section class="main2">
+      <div>
+        <h2>特徴の紹介</h2>
+      </div>
+      
+      <div class="feature">
+        <img src="feature-1.png" alt="" width="300" height="200">
+        <div class="sentence">
+          <h3>すごい特徴</h3>
+          <p>すごいのです！</p>
+        </div>
+      </div>
+      
+      <div class="feature">
+        <img src="feature-2.png" alt="" width="300" height="200">
+        <div class="sentence">
+          <h3>すごい特徴</h3>
+          <p>すごいのです！</p>
+        </div>
+      </div>
+
+      <div class="feature">
+        <img src="feature-3.png" alt="" width="300" height="200">
+        <div class="sentence">
+          <h3>すごい特徴</h3>
+          <p>すごいのです！</p>
+        </div>
+      </div>
+    </section>
   </main>
   
   <footer>
-    (c) dotinstall.com
+    <small>(c) dotinstall.com</small>
   </footer>
-  
 </body>
 </html>
