--- a/MyWalkingApp/index.html
+++ b/MyWalkingApp/index.html
@@ -12,7 +12,10 @@
   <header>
 
     <h1>
-      <img src="logo-sp.png" alt="Dotinstall Walking" width="116" height="32">
+      <img src="logo-sp.png" alt="Dotinstall Walking" width="116" height="32" 
+      class="logo-sp">
+      <img src="logo-pc.png" alt="Dotinstall Walking" width="284" height="32"
+      class="logo-pc">
     </h1>
     <a href="#" class="btn">ダウンロード</a>
   
@@ -25,7 +28,10 @@
         <p>毎日のお散歩を<br>AIがもっと楽しくする</p>
         <a href="#" class="btn">ダウンロード</a>
       </div>
-      <img src="app.png" alt="application image" width="300" height="312">
+
+      <div>
+        <img src="app.png" alt="application image" width="300" height="312">
+      </div>
     </section>
 
     <section class="main2">
